Log backend v1.1 API changes
